<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="image_isen">logo_isen</string>

    <string name="login_connexion">Connexion</string>
    <string name="login_id">Identifiant</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_id_hint">example@abc.fr</string>
    <string name="login_password_hint">wJ36CpAwPoFt</string>
    <string name="login_validate">VALIDER</string>

    <string name="home_welcome">Bonjour</string>
    <string name="home_life_cycle">Cycle de vie</string>
    <string name="home_save">Sauvegarde</string>
    <string name="home_permissions">Permissions</string>
    <string name="home_webservices">Webservices</string>
    <string name="home_logout">SE DÉCONNETER</string>
    <string name="home_profile">PROFIL</string>

    <string name="save_name">Nom</string>
    <string name="save_surname">Prénom</string>
    <string name="save_date">Date de naissance</string>
    <string name="save_submit">ENVOYER</string>

    <string name="profile_title">Profil</string>
    <string name="profile_close">Fermer</string>


    <string name="permissions_title">Accès aux informations Android</string>
    <string name="permissions_Latitude">Latitude : </string>
    <string name="permissions_Longitude">Longitude : </string>
    <string name="permissions_image">Votre image</string>

    <string name="webservices_details">Détails</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
