<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionsActivity"
    >

    <TextView
        android:id="@+id/textPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/permissions_title"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/capture"
        android:layout_width="114dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/permissions_image"
        android:scaleType="fitStart"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPermission" />

    <ListView
        android:id="@+id/contactList"
        android:layout_width="319dp"
        android:layout_height="643dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPermission">

    </ListView>

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/permissions_Latitude"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintTop_toBottomOf="@+id/textPermission" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/permissions_Longitude"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintTop_toBottomOf="@+id/textLatitude" />

    <TextView
        android:id="@+id/valueLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintTop_toBottomOf="@+id/textLatitude" />

    <TextView
        android:id="@+id/valueLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintTop_toBottomOf="@+id/textLongitude" />

</androidx.constraintlayout.widget.ConstraintLayout>